tests/parser/define-instance.4.bad.error
error: Malformed method definition
  --> test:5:2
   |
 4 |  (define-instance (C :a)
   |                   ------ when parsing instance
 5 |    (define))
   |    ^^^^^^^^ expected definition name
